# sipbell

./: .gitignore  README.md
mqtt_sip_bridge/: CMakeLists.txt  Dockerfile  LICENSE  README.md  args.c  bridge.c
mqtt_sip_bridge/include/: defs.h  mqtt.h  sip.h  sip_queue.h  threaded_timer.h
mqtt_sip_bridge/src/: mqtt.c  sip.c  sip_queue.c  timer.c
mqtt_sip_bridge/systemd/: mqtt2sip-docker.service  mqtt2sip.service
wifi_mqtt_receiver/: README.md  wifi_mqtt_receiver.ino
